# ferrobucket

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
crates/server/: Cargo.toml
crates/server/src/: error.rs  lib.rs  main.rs  presign.rs  s3_impl.rs
crates/server/src/ui/: download.rs  mod.rs  upload.rs
crates/server/tests/: integration.rs  ui_upload_smoke.rs
crates/storage/: Cargo.toml
crates/storage/proptest-regressions/: encode.txt
crates/storage/src/: encode.rs  etag.rs  fs.rs  lib.rs  list.rs  meta.rs  multipart.rs  presign.rs  range.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  lib.rs  shell.rs  styles.css  types.rs
crates/ui/src/components/: breadcrumb.rs  bucket_table.rs  copy_field.rs  empty_state.rs  inline_preview.rs  loading_state.rs  mod.rs  object_table.rs  pagination_bar.rs  sidebar.rs  status_indicator.rs
crates/ui/src/islands/: confirm_modal.rs  copy_button.rs  create_bucket_modal.rs  mod.rs  sidebar_status.rs  slide_over.rs  theme_toggle.rs  toast.rs  upload_panel.rs  upload_zone.rs
crates/ui/src/pages/: bucket_list.rs  mod.rs  object_browser.rs  settings.rs
crates/ui/src/server_fns/: buckets.rs  mod.rs  objects.rs  presign.rs  settings.rs  state.rs
docs/: DECISIONS.md  index.html
