[package]
name = "ferrobucket-server"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "ferrobucket"
path = "src/main.rs"

[dependencies]
ferrobucket-storage = { path = "../storage" }
s3s           = { version = "=0.13.0" }
axum          = { version = "=0.8.8" }
tokio         = { version = "1", features = ["full"] }
clap          = { version = "4", features = ["derive"] }
async-trait   = { version = "=0.1.89" }
bytes         = { version = "1" }
futures       = { version = "0.3" }
http-body     = { version = "1" }
http-body-util = { version = "0.1" }
time          = { version = "0.3", features = ["serde-human-readable"] }
anyhow        = "1"

[dev-dependencies]
# aws-sdk-s3 = { version = "..." }  # Added by Plan 03 when compatibility with
# s3s =0.13.0 hmac rc pins is confirmed. aws-sdk-s3 v1.x requires hmac ^0.13 (stable)
# while s3s requires hmac =0.13.0-rc.5; they conflict in the same workspace.
tokio      = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile   = "3"
