[package]
name = "ferrobucket-server"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "ferrobucket"
path = "src/main.rs"

# cargo-leptos passes bin-features=["ssr"] when building the server binary.
# Plan 03 wires the real Leptos mount seam (leptos_routes_with_context + AppState).
[features]
ssr = []
embed-assets = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
ferrobucket-storage = { path = "../storage" }
ferrobucket-ui = { path = "../ui", features = ["ssr"] }
s3s           = { version = "=0.13.0" }
axum          = { version = "=0.8.8" }
tokio         = { version = "1", features = ["full"] }
clap          = { version = "4", features = ["derive", "env"] }
async-trait   = { version = "=0.1.89" }
bytes         = { version = "1" }
futures       = { version = "0.3" }
http-body     = { version = "1" }
http-body-util = { version = "0.1" }
time          = { version = "0.3", features = ["serde-human-readable"] }
anyhow        = "1"
# Promoted from dev-deps: presign_url needs these at runtime (T-03-SC, no new crates).
hmac = "=0.13.0-rc.5"
sha2 = "=0.11.0-rc.5"
hex = "0.4.3"
# Leptos SSR stack — pinned versions from Phase 0 compile verification.
leptos = { version = "=0.8.19", features = ["ssr"] }
leptos_axum = { version = "=0.8.9" }
leptos_meta = { version = "=0.8.6", features = ["ssr"] }
leptos_router = { version = "=0.8.13", features = ["ssr"] }
# Static asset serving for /pkg (cargo-leptos output dir).
tower-http = { version = "0.6", features = ["fs"] }
# Embedded static assets for release builds (D-01/D-02 — embed-assets feature).
rust-embed = { version = "8", features = ["axum-ex"], optional = true }
mime_guess = { version = "2", optional = true }
# Serialization — needed by upload handler (complete multipart body JSON parsing).
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
# aws-sdk-s3 = { version = "..." }  # Added by Plan 03 when compatibility with
# s3s =0.13.0 hmac rc pins is confirmed. aws-sdk-s3 v1.x requires hmac ^0.13 (stable)
# while s3s requires hmac =0.13.0-rc.5; they conflict in the same workspace.
tokio      = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile   = "3"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream"] }
tower = { version = "0.5", features = ["util"] }
serde_json = { version = "1" }
