[package]
name = "ferrobucket-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
percent-encoding = "2.3"
md-5 = "=0.11.0-rc.5"
# SigV4 presign (same pin as crates/server — shared hmac/sha2 RC ecosystem)
hmac = "=0.13.0-rc.5"
sha2 = "=0.11.0-rc.5"
hex = "0.4.3"
tempfile = "3"
base64 = "0.22"
time = { version = "0.3", features = ["serde-human-readable"] }
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
