[package]
name = "ferrobucket-ui"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
hydrate = [
    "leptos/hydrate",
    "leptos/islands",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:gloo-net",
    "dep:console_error_panic_hook",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:ferrobucket-storage",
]

[dependencies]
leptos = { version = "=0.8.19", features = ["islands"] }
leptos_meta = { version = "=0.8.6" }
leptos_router = { version = "=0.8.13" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# hydrate-only (browser WASM)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "XmlHttpRequest",
    "XmlHttpRequestUpload",
    "ProgressEvent",
    "File",
    "FileList",
    "Blob",
    "FormData",
    "DragEvent",
    "DataTransfer",
    "Window",
    "Document",
    "HtmlElement",
    "Storage",
] }
gloo-net = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# ssr-only (server)

axum = { version = "=0.8.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
leptos_axum = { version = "=0.8.9", optional = true }
ferrobucket-storage = { path = "../storage", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
